--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,6 @@
-PORT = port
-DB_USER = "roousert"
-DB_NAME = "db_name"
-DB_PASSWORD = "password"
-DB_HOST = "host"
+PORT = 
+DB_USER = 
+DB_NAME = 
+DB_PASSWORD = 
+DB_HOST = 
+SESSION_SECRET = 
