--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "site-noticias",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -14,11 +13,22 @@
     "bcryptjs": "^2.4.3",
     "dotenv": "^16.0.2",
     "express": "^4.18.1",
+    "express-flash": "^0.0.2",
     "express-handlebars": "^6.0.6",
+    "express-session": "^1.17.3",
     "express-sessions": "^1.0.6",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^2.3.3",
     "nodemon": "^2.0.20",
     "sequelize": "^6.23.0"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Enzomf/Litoral_Noticias.git"
+  },
+  "bugs": {
+    "url": "https://github.com/Enzomf/Litoral_Noticias/issues"
+  },
+  "homepage": "https://github.com/Enzomf/Litoral_Noticias#readme",
+  "description": ""
 }
