atualizado o arquvi .env.example

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,12 +1,13 @@
-PORT = 
-DB_HOST = 
-DB_NAME = 
-DB_USER = 
-DB_PASSWORD = 
-DB_DIALECT = 
+PORT = 3000
+DB_HOST = "localhost"
+DB_NAME = "site_noticias"
+DB_USER = "root"
+DB_PASSWORD = ""
+DB_DIALECT = "mysql"
 
-ROLE_READER = 
-ROLE_WRITTER = 
-ROLE_ADMIN = 
+ROLE_READER = 7681
+ROLE_WRITTER = 3574
+ROLE_ADMIN = 2085
 
-TOKEN_SECRET = 
+BASE_URL = "http://localhost:3000"
+TOKEN_SECRET = 781ecb5259a3dc9057b5332e57e72603d6bfe0fa
